--- a/exer1.html
+++ b/exer1.html
@@ -4,8 +4,8 @@
         <title>Hello!</title>
     </head>
     <body>
-        <h1> style="color:blue;">Welcome to my website!</h1>
-        <h2>hello</h2>
-        Hello, world!
+        <h1 style="color: blue;">Seja bem vindo!</h1>
+        <h2 style="color: red;">ao meu website fodastico!!</h2>
+        <h3 style="color: green;">daqui nascera um sucesso!!</h3>
     </body>
 </html>
